# ravro

./: .gitignore  .travis.yml  Cargo.toml  README.md  install_test_util.sh
benches/: encoding.rs
examples/: journal_record.rs
src/: codec.rs  common.rs  complex.rs  conversion.rs  datafile.rs  errors.rs  lib.rs  macros.rs  reader.rs  schema.rs  snappy.rs  types.rs  writer.rs
src/complex/: enum_schema.rs  enum_type.rs  mod.rs  record_schema.rs  record_type.rs
tests/: common.rs  complex.rs  custom.rs  header_reads.rs  primitive.rs  primitive_data_writes.rs  reading.rs  schema.rs
tests/schemas/: bool_schema.avsc  custom_btreemap.avsc  enum_schema.avsc  journal.avsc  journal_schema.avsc  map_schema.avsc  mapmap_schema.avsc  nested_schema.avsc  record_schema.avsc  record_string_schema.avsc
